# flotorch-labs

./: 4.1 Prerequisites.ipynb  4.2 Retrieval_using_flotorch_with_fixed_chunking-Copy1.ipynb  4.3 evaluation.ipynb  Prerequisites.ipynb  custom_eval.py  inference.ipynb  requirements.txt
Experimentation on Human Eval Dataset with FloTorch/:  Ragas Evaluation - Multiple Models.ipynb  1 Prerequisites for FloTorch.ipynb  1. Prerequisites for FloTorch.ipynb  2 Retrieval and Generation - Multiple Models.ipynb  2. Retrieval and Generation - Multiple Models.ipynb  2.1 Retrieval and Generation - Multiple Models (opensource).ipynb  2.2  Retrieval and Generation - Multiple Models (enterprise).ipynb  3 Custom Evaluation - Multiple Models.ipynb  3. Custom Evaluation - Multiple Models.ipynb  (+9 more)
Experimentation on Human Eval Dataset with FloTorch(Enterprise)/: 3 Custom Evaluation - Multiple Models.ipynb  variables.json
Experimentation on Human Eval Dataset with FloTorch(opensource)/: flotorch_rag_utils.py
finance/finance-document-analyzer/: README.md  pyproject.toml  requirements.txt
finance/finance-document-analyzer/output/: report.json
finance/finance-document-analyzer/src/floagentdemo/: api.py  main.py
finance/finance-document-analyzer/src/floagentdemo/config/: agents.yaml
finance/finance-document-analyzer/src/floagentdemo/data/: statement.txt
finance/finance-document-analyzer/src/floagentdemo/streamlitDemo/: app.py  streamlit.md
finance/finance-document-analyzer/src/floagentdemo/streamlitDemo/utils/: dashboard.py  fileProcessing.py  generatePdf.py  transform.py
(+83 files in other folders)
